update school desc, image, font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Samuel Simogiarto</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Oleo+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -40,7 +41,7 @@
     <div class="welcome">
       <h5 class="intro">Hi, my name is</h5>
       <h1>Samuel Simogiarto</h1>
-      <h2 class="sub-name">I Love Numbers</h2>
+      <!-- <h2 class="sub-name">I Love Numbers</h2> -->
       <p class='summary-desc'>I am a Data-driven individual with the desire to keep learning and exploring ideas to enhance creativity, who have established track of leadership. A Bachelor of Science with major in mathematics, experienced in working
         with big data, programming, analytics, and problem solving. An independent person who adapt easily to surroundings and new environment, including programming languages and projects.</p>
       <a href="SamuelResume.pdf" download>
@@ -51,7 +52,7 @@
 
   <div class="about-me" id="about">
     <div class="about-me-desc">
-      <img class="profile-pict" src="Samuel Simogiarto.png" alt="profile-picture">
+      <img class="profile-pict" src="Samuel_Simogiarto.png" width=20% alt="profile-picture">
       <h1>Hello</h1>
       <p>I am just an ordinary kid from Indonesia. Came to Canada in 2015 to pursue my dream to be educated in one of the best universities in the world. And here I am as a UBC graduate class of 2019. A hardworker who have a great ambition and
         million dreams. I am not afraid to set the bar high because if someone can achieve it, why can't I? I love to learn new things because I do not want to feel left out, so I can share and have chat about what those things are with anyone. Although some of my dreams are already become reality, the list doesn't stop there. I do have plenty and I would love to tell you about it! So check me out!</p>
@@ -163,7 +164,7 @@
           <div class="tab-pane fade show active" id="list-home2" role="tabpanel" aria-labelledby="list-home-list">
             <p class="job-title">Bachelor of Science, Mathematics</p>
             <p class="time">September 2016 - May 2019</p>
-            <p class="job-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="job-desc">Although Mathematics is my main major and I am loving it, I chose to take Computer Science and Statistics courses to fulfill my elective requirements. Not only 100-200 levels, but I also took upper-level of CS and STAT since I believe they are important skills to have in this modern world. Coursework includes software engineering, internet computing, algorithms, regressions, data structures, data relationships, statistical inferences and many more. During my three years in UBC, I was also involved in extracurricular activities. I joined team misfits to compete in UBC Nitobe Basketball League and I also joined student clubs such as CCO and BizTech. I also joined hackatons and case competitions like UBC Local Hack, nwHacks, and BizHacks.</p>
             <p class="tech tech-work">
               <a href="https://www.ubc.ca"> <button class="btn btn-info" type="button" name="button">School Site</button> </a>
             </p>
@@ -171,7 +172,7 @@
           <div class="tab-pane fade" id="list-profile2" role="tabpanel" aria-labelledby="list-profile-list">
             <p class="job-title">Associate of Science Program</p>
             <p class="time">August 2015 - August 2016</p>
-            <p class="job-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="job-desc">I attended three terms in Langara College. In these three terms, I have succeed to complete four Physics courses, four Mathematics courses, and One Computer Science course, along with three other electives. The reason I took core courses was because I was really determined to be transferred to UBC as soon as possible in the engineering program. However, since along the way I pick my interest in Math and Computer Science, I decided to drop my engineering and chose to be a Math major instead. During my 1 year in Langara College, I was active to join basketball intramurals and was a member of the Indonesian Assosication club.</p>
             <p class="tech tech-work">
               <a href="https://www.langara.ca"> <button class="btn btn-info" type="button" name="button">School Site</button> </a>
             </p>
@@ -179,7 +180,7 @@
           <div class="tab-pane fade" id="list-settings2" role="tabpanel" aria-labelledby="list-settings-list">
             <p class="job-title">High School Diploma</p>
             <p class="time">July 2012 - May 2015</p>
-            <p class="job-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="job-desc">My high school is one of the best high schools in Indonesia. During high school, I was involved in many activities. I was in the basketball varsity team, I was in the student orientation council, and I joined multiple academic competitions. I am also one of the 20 people who were chosen to represent the school to participate in the student exchange program to Taiwan.</p>
             <p class="tech tech-work">
               <a href="https://smakstlouis1sby.sch.id/"> <button class="btn btn-info" type="button" name="button">School Site</button> </a>
             </p>
