fix typo and change dot color

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <img class="profile-pict" src="Samuel_Simogiarto.png" width=20% alt="profile-picture">
       <h1>Hello</h1>
       <p>I am just an ordinary kid from Indonesia. Came to Canada in 2015 to pursue my dream to be educated in one of the best universities in the world. And here I am as a UBC graduate class of 2019. A hardworker who have a great ambition and
-        million dreams. I am not afraid to set the bar high because if someone can achieve it, why can't I? I love to learn new things because I do not want to feel left out, so I can share and have chat about what those things are with anyone. Although some of my dreams are already become reality, the list doesn't stop there. I do have plenty and I would love to tell you about it! So check me out!</p>
+        million dreams. I am not afraid to set the bar high because if someone can achieve it, why can't I? I love to learn new things because I do not want to feel left out, so I can share and have conversations about what those things are with anyone. Although some of my dreams are already become reality, the list doesn't stop there. I do have plenty and I would love to tell you about it! So, check me out!</p>
     </div>
 
     <hr>
