bug fix on laptop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <nav class="nav-custom navbar sticky-top navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="#home">
       <img src="logo-via-logohub.png" width="50" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
