--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
     <div class="row row-work">
       <div class="col-4">
         <div class="list-group" id="list-tab" role="tablist">
-          <a class="list-bg list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Rocky Mountaineer</a>
+           <a class="list-bg list-group-item list-group-item-action active" id="list-home-BBY" data-toggle="list" href="#list-BBY" role="tab" aria-controls="BBY">Best Buy Canada</a>
+           <a class="list-bg list-group-item list-group-item-action" id="list-home-SOF" data-toggle="list" href="#list-SOF" role="tab" aria-controls="SOF">Save On Foods</a>
+           <a class="list-bg list-group-item list-group-item-action" id="list-home-RO" data-toggle="list" href="#list-RO" role="tab" aria-controls="RO">Rubicon Organics</a>
+          <a class="list-bg list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Rocky Mountaineer</a>
           <a class="list-bg list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">RBC Royal Bank</a>
           <a class="list-bg list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Filson</a>
           <a class="list-bg list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Starbucks</a>
@@ -106,7 +109,37 @@
       </div>
       <div class="col-8">
         <div class="tab-content" id="nav-tabContent">
-          <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+          <div class="tab-pane fade show active" id="list-BBY" role="tabpanel" aria-labelledby="list-home-BBY">
+            <p class="job-title">Data Analyst II</p>
+            <p class="time">December 2021 - <em>present</em></p>
+            <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
+              to monitor and respond requests that comes into Analytics inbox as well as distributing outside sales customer report in monthly basis.</p>
+            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel
+              <br>
+              <a href="https://www.bestbuy.ca"> <button class="btn btn-info" type="button" name="button">Company Site</button> </a>
+            </p>
+          </div>
+          <div class="tab-pane fade" id="list-SOF" role="tabpanel" aria-labelledby="list-home-SOF">
+            <p class="job-title">Reporting & Viz Specialist --> Data Analyst 1 --> Data Analyst 2</p>
+            <p class="time">October 2020 - <em>November 2021</em></p>
+            <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
+              to monitor and respond requests that comes into Analytics inbox as well as distributing outside sales customer report in monthly basis.</p>
+            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel
+              <br>
+              <a href="https://www.saveonfoods.com"> <button class="btn btn-info" type="button" name="button">Company Site</button> </a>
+            </p>
+          </div>
+          <div class="tab-pane fade" id="list-RO" role="tabpanel" aria-labelledby="list-home-RO">
+            <p class="job-title">Supply Chain Data Analyst</p>
+            <p class="time">September 2020 - <em>October 2020</em></p>
+            <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
+              to monitor and respond requests that comes into Analytics inbox as well as distributing outside sales customer report in monthly basis.</p>
+            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel
+              <br>
+              <a href="https://www.rubiconorganics.com"> <button class="btn btn-info" type="button" name="button">Company Site</button> </a>
+            </p>
+          </div>
+          <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
             <p class="job-title">Junior Data Analyst</p>
             <p class="time">January 2020 - <em>present</em></p>
             <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
