Update Job Desc

--- a/index.html
+++ b/index.html
@@ -112,19 +112,17 @@
           <div class="tab-pane fade show active" id="list-BBY" role="tabpanel" aria-labelledby="list-home-BBY">
             <p class="job-title">Data Analyst II</p>
             <p class="time">December 2021 - <em>present</em></p>
-            <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
-              to monitor and respond requests that comes into Analytics inbox as well as distributing outside sales customer report in monthly basis.</p>
-            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel
+            <p class="job-desc">I am embedded in E-Commerce Operation and BI family. Currently focusing in text-analysis.</p>
+            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel, PLSQL, Azure, NLP
               <br>
               <a href="https://www.bestbuy.ca"> <button class="btn btn-info" type="button" name="button">Company Site</button> </a>
             </p>
           </div>
           <div class="tab-pane fade" id="list-SOF" role="tabpanel" aria-labelledby="list-home-SOF">
-            <p class="job-title">Reporting & Viz Specialist --> Data Analyst 1 --> Data Analyst 2</p>
+            <p class="job-title">Reporting & Viz Specialist - Data Analyst 1 - Data Analyst 2</p>
             <p class="time">October 2020 - <em>November 2021</em></p>
-            <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
-              to monitor and respond requests that comes into Analytics inbox as well as distributing outside sales customer report in monthly basis.</p>
-            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel
+            <p class="job-desc">During my employment with Save On Foods, I am proud that I have been promoted twice in the span of just 14 months. I started my journey as a Reporting and Visualization Specialist who oversaw enterprise's reportings and dashboardings. This includes PowerBI and Qlikview Dashboards that being used by everyone in the business as well as recurring email reporting (daily/weekly/monthly/quarterly) that is produced by Qlikview nPrint. When I saw oversaw, it includes: maintaining and improving dashboard and report run times and bug fixes, automating manual works, and engineering new report and dashboard. Then, as a data analyst, while still supporting and training new hires in the Visualization team as well as owning some of the dashboards, I am focues more in Merchandising and E-Commerce Operation department. Helping them with data analysis using Python and Excel. As a data analysis, not only I provided hindsight on what happened in the past, but I also helped the business understanding and providing insight on how and why they happened. I led a million dollars worth of a project and helped built a PowerBI Dashboaord that the executives of The Pattison Food Group could self-served.</p>
+            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Qlikview, Excel, Databricks, PLSQL, Azure
               <br>
               <a href="https://www.saveonfoods.com"> <button class="btn btn-info" type="button" name="button">Company Site</button> </a>
             </p>
@@ -132,9 +130,8 @@
           <div class="tab-pane fade" id="list-RO" role="tabpanel" aria-labelledby="list-home-RO">
             <p class="job-title">Supply Chain Data Analyst</p>
             <p class="time">September 2020 - <em>October 2020</em></p>
-            <p class="job-desc">My main job is as an ad-hoc business support. I work closely with multiple stakeholders in multiple departments. Gather data and analysis to answer business questions and to solve business problems. In addition, my secondary tasks is
-              to monitor and respond requests that comes into Analytics inbox as well as distributing outside sales customer report in monthly basis.</p>
-            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel
+            <p class="job-desc">I worked at Rubicon on contract for a short period of time. I oversaw the reporting, analysis, and forecasting of the inventory and crop planning. In this short period of time, I learned a lot about Supply Chain and Inventory Management. I am proud to say that eventhough it's just a short period of employment, I have contributed much to the company.I created and developed a Business Crop Planning Tool by performing data analysis and forecasting. Using mathematical model, I improved the accuracy of forecasting the production of crops for the following year and allowed the President and team to have careful demand planning and budget planning for the year 2021. I also maintained consistency and good supply chain’s data to avoid discrepancies within inventory and help improve the monthly inventory count speed and accuracy from 2 business days to just 1 business day and allow production to resume sooner.</p>
+            <p class="tech tech-work"><strong>Tech Stack:</strong> Python, PowerBI, Excel, Excel VBA, Power Query
               <br>
               <a href="https://www.rubiconorganics.com"> <button class="btn btn-info" type="button" name="button">Company Site</button> </a>
             </p>
