--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- <h2 class="sub-name">I Love Numbers</h2> -->
       <p class='summary-desc'>I am a Data-driven individual with the desire to keep learning and exploring ideas to enhance creativity, who have established track of leadership. A Bachelor of Science with major in mathematics, experienced in working
         with big data, programming, analytics, and problem solving. An independent person who adapt easily to surroundings and new environment, including programming languages and projects.</p>
-      <a href="SamuelResume.pdf" download>
+      <a href="SamuelSimogiarto_RESUME2021.pdf" download>
         <button class="btn btn-lg resume" type="button" name="button">Resume</button>
       </a>
     </div>
